# game2 findDiff refactoring